test: nest ActivatedJob mapping tests under dedicated class
Moves parameterized tests for user task property mapping on activated jobs into a nested class
`ActivatedJobMappingTest` to improve structure and make room for additional `ResponseMapperTest` cases.

Also renames the test case record to `ActivatedJobWithUserTaskPropsCase` for better clarity.
Same structure applied to both gRPC and REST gateway response mapper tests.